# FiniteStateMachine

./: .gitignore  CMakeLists.txt  FiniteStateMachine.cpp  FiniteStateMachine.h  FiniteStateMachine.vcxproj  FiniteStateMachine.vcxproj.filters  Language.h  README.md  Symbol.h  Terminal.h
Errors/: Error.cpp  Error.h  InputNotAccepted.h  StateIsNotFinalState.h  TransitionFunctionNotFound.h
Exceptions/: TransitionFunctionNotFound.cpp
FiniteStateMachine/: BasicFiniteStateMachine.cpp  BasicFiniteStateMachine.h  FiniteStateMachine.cpp  FiniteStateMachine.h  StateTransitionFunction.h  Transition.h
FiniteStateMachine/Exceptions/: InputNotAccepted.cpp  InputNotAccepted.h  StateIsNotFinalState.cpp  StateIsNotFinalState.h  TransitionFunctionNotFound.cpp  TransitionFunctionNotFound.h
Languages/: Czech.h  English.h
src/: BasicFiniteStateMachine.cpp  BasicFiniteStateMachine.h  BasicStateTransitionFunction.h  FiniteStateMachine.cpp  FiniteStateMachine.h  Language.h  StateTransitionFunction.h  Symbol.h  Transition.h
src/Errors/: InputNotAccepted.h  StateIsNotFinalState.h  TransitionFunctionNotFound.h
src/Languages/: Czech.h  English.h
src/ProcessResult/: FailedProcessResult.h  ProcessResult.h  SuccessfulProcessResult.h
